sumo/tests/sumo/pedestrian_model/striping/errors/route_invalid_permissions_ignore/errors.sumo
Warning: Pedestrian 'p0' could not find sidewalk on edge 'end', time=0.00.
Warning: Pedestrian 'p1' could not find sidewalk on edge 'end', time=0.00.
